@@ -25,6 +25,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|hive
@@ -135,6 +163,23 @@ name|UDFRegExp
 extends|extends
 name|UDF
 block|{
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|UDFRegExp
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 specifier|private
 name|Text
 name|lastRegex
@@ -148,6 +193,11 @@ name|Pattern
 name|p
 init|=
 literal|null
+decl_stmt|;
+name|boolean
+name|warned
+init|=
+literal|false
 decl_stmt|;
 name|BooleanWritable
 name|result
@@ -184,6 +234,53 @@ condition|)
 block|{
 return|return
 literal|null
+return|;
+block|}
+if|if
+condition|(
+name|regex
+operator|.
+name|getLength
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|warned
+condition|)
+block|{
+name|warned
+operator|=
+literal|true
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" regex is empty. Additional "
+operator|+
+literal|"warnings for an empty regex will be suppressed."
+argument_list|)
+expr_stmt|;
+block|}
+name|result
+operator|.
+name|set
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+return|return
+name|result
 return|;
 block|}
 if|if
@@ -240,8 +337,10 @@ name|set
 argument_list|(
 name|m
 operator|.
-name|matches
-argument_list|()
+name|find
+argument_list|(
+literal|0
+argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
